k8s/eks/frontend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: practice-project

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
