k8s/eks/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: practice-project

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
